# Sentinel-Scanner

sentinel/: README.md  pyproject.toml
sentinel/sentinel/: __init__.py  cli.py  config.py  reporter.py  rules.py  scanner.py
sentinel/tests/: test_scanner.py
